# dolanan-data

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  raw_data.dvc
.dvc/: config
dlthub/: README.md  nyc_taxi_pipeline.py
dlthub/.dlt/: config.toml
marimo/: playground.py
marimo/__marimo__/session/: playground.py.json
polaris/: create-catalog.sh
scripts/: entrypoint-postgres.sh  init-pgduck-server.sql  run_dlt_pipeline.sh  upload_csv_to_minio.py
sqlmesh/: README.md  config.yaml  external_models.yaml
sqlmesh/models/: README.txt  hello.sql
sqlmesh/models/mart/: analytics_daily_summary.sql  analytics_distance_cohort.sql  analytics_hourly_pattern.sql  analytics_payment_method.sql  analytics_vendor_performance.sql  dim_date.sql  dim_payment_type.sql  dim_rate_code.sql  dim_time.sql  dim_vendor.sql  fact_trip.sql  mart_daily_summary.sql  mart_geographic_analysis.sql  mart_hourly_demand_patterns.sql  mart_location_performance.sql  mart_popular_routes.sql  mart_revenue_analysis.sql  mart_time_trends.sql  mart_vendor_performance.sql
trino/catalog/: nyc_taxi_catalog.properties
trino/etc/: config.properties  jvm.config  log.properties  node.properties
