[project]
name = "data-platform-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt-iceberg>=0.2.0",
    "dlt[filesystem]>=1.20.0",
    "duckdb>=1.4.3",
    "enlighten>=1.14.1",
    "ipykernel>=7.1.0",
    "pyiceberg>=0.10.0",
    "sqlalchemy>=2.0.45",
    "sqlmesh[dlt,duckdb,trino]>=0.228.1",
]
